added plan trip, newsletter and footer

--- a/index.html
+++ b/index.html
@@ -175,18 +175,156 @@
         <!-- End popular-destinations -->
 
         <!-- Start plan trip -->
+        <section class="plan-trip section" id="plan-trip">
+            <div class="plan-trip-container container d-grid">
 
+                <div class="plan-trip-data">
+                    <span class="tagline">Planning your trip</span>
+                    <h1 class="title main-title">
+                        Let's <span class="accent-text">explore</span> coolest beach now!
+                    </h1>
+                    <p class="description">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque maxime harum voluptas ea libero
+                        tempora rerum minus.
+                    </p>
+                    <a href="#" class="btn">Explore</a>
+                </div>
+
+                <div class="beach-data-wrapper image-box">
+                    <img src="./images/plan-trip-image.jpg" alt="" srcset="">
+                </div>
+            </div>
+        </section>
         <!-- End plan trip -->
 
         <!-- Start newsletter -->
-
+        <section class="newsletter section" id="newsletter">
+            <div class="newsletter-container container">
+                <div class="newsletter-container-inner">
+                    <h2 class="title">
+                        Subscribe now to get latest SeaSide news. Or plan your trip now. Whatever works.
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iure odio voluptatem
+                        asperiores deserunt aperiam ipsa maiores consequuntur porro. Aperiam!
+                    </p>
+                    <div class="btn-group">
+                        <a href="#" class="btn btn-light">Subscribe now</a>
+                        <a href="#" class="btn">Get a quote</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- End newsletter -->
 
         <!-- End main -->
     </main>
 
     <!-- Start footer -->
+    <footer class="footer section">
+        <div class="footer-container container">
+            <div class="footer-container-inner d-grid">
 
+                <div>
+                    <h6 class="title footer-title">Company</h6>
+                    <ul class="list">
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h6 class="title footer-title">Company</h6>
+                    <ul class="list">
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h6 class="title footer-title">Company</h6>
+                    <ul class="list">
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">Some link</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="contact-information">
+
+                    <h6 class="title footer-title">Contact</h6>
+                    <address>
+                        <span>123 Fake St.</span>
+                        <span>Toronto, ON</span>
+                        <a href="tel:800-555-5555" class="underline">(800) 555-5555</a>
+                        <a href="mailto:" class="underline">email@gmail.com</a>
+                    </address>
+                    <ul class="list">
+                        <li class="list-item">
+                            <a href="#" class="list-link">
+                                <i class="ri-facebook-circle-line"></i>
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">
+                                <i class="ri-instagram-line"></i>
+                            </a>
+                        </li>
+                        <li class="list-item">
+                            <a href="#" class="list-link">
+                                <i class="ri-twitter-line"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+            <hr class="footer-separator">
+
+            <span class="copyright">&copy; 2021 SeaSide Corp. All rights reserved.</span>
+
+        </div>
+    </footer>
     <!-- End footer -->
 
     <!-- Custom script -->
