Adding media queries and scroll reveal

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <div class="nav-mobile">
                 <ul class="list">
                     <li class="list-item">
-                        <a href="#" class="list-link current">Home</a>
+                        <a href="#showcase" class="list-link current">Home</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="list-link">Destinations</a>
+                        <a href="#popular-destinations" class="list-link">Destinations</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="list-link">Plan trip</a>
+                        <a href="#plan-trip" class="list-link">Plan trip</a>
                     </li>
                     <li class="list-item lg-screen-hidden">
-                        <a href="#" class="list-link">Book now</a>
+                        <a href="#newsletter" class="list-link">Book now</a>
                     </li>
                 </ul>
             </div>
